# eva-lang

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  main.cpp  run.sh
asset/: EvaGrammar.bnf  main.bc  main.cpp  main.s
include/: EvaIRGener.h  EvaParser.h  Logger.h
llvm-instruction/: main  main.ll  main2.ll
src/: Environment.h  EvaIRGener.cpp  EvaLLVM.h  EvaLLVM_template.h  EvaParser.cpp
src/parser/: EvaParser.h
